<resources>
    <string name="app_name">Backflow Calculator</string>
    <string name="on_the_floor">On The Floor: %s</string>
    <string name="fill_amount">Fill Amount: %s</string>
    <string name="backflow">Backflow: %s</string>
    <string name="return_boxes">Total Boxes To Be Returned: %s</string>
    <string name="reset">Reset</string>
    <string name="copyright_ikea">© Kevin Martin 2021</string>
    <string name="stock">Voorraad</string>
    <string name="sgf">SGF</string>
    <string name="assq">ASSQ</string>
    <string name="flex">Flex</string>
    <string name="mupq_per_box">MUPQ Per Box</string>

    <string name="app_update_title">Backflow Calculator update available</string>
    <string name="app_update_description">Tap to download %s</string>
    <string name="app_version">v%s</string>
    <string name="share_app">Share App</string>
    <string name="ok">Ok</string>
    <string name="share_dialog_title">Scan QR code to open the download page for the latest version of this app.</string>
    <string name="qr">Qr</string>
</resources>